--- a/docs/guides/latest-updates.mdx
+++ b/docs/guides/latest-updates.mdx
@@ -33,7 +33,7 @@ This section summarizes the recent enhancements and new features for the new [IB
 
 - Profile page: Now you can find integrated profile details directly in the new platform. Find your profile by clicking on the profile icon in the top right or visiting your [profile page.](https://quantum.cloud.ibm.com/profile)
 - Public backends: View a list of US backends without logging in, available on the updated [Compute Resources](https://quantum.cloud.ibm.com/computers) page.
-- Learning: New learning resources, including courses and modules, are now available to help you improve your skills and knowledge. Access these resources without logging in on [IBM Quantum Learning.](/learning)
+- Learning: Quantum computing courses have now been released in the upgraded platform, along with new educational modules designed to help teachers bring Qiskit into their classrooms. This is the first step towards migrating IBM Quantum Learning to the new platform, with more resources - including the Circuit Composer, which will be released in the coming weeks. Resources can be accessed without needing to log in at [IBM Quantum Learning.](/learning)
 - Announcements: Announcements have been migrated to the new platform. Click the bell icon in the top navigation bar or visit the [Announcements](/announcements) page.
 
 <details>
