--- a/docs/guides/qiskit-addons-aqc-get-started.ipynb
+++ b/docs/guides/qiskit-addons-aqc-get-started.ipynb
@@ -513,7 +513,7 @@
     "## Next steps\n",
     "\n",
     "<Admonition type=\"tip\" title=\"Recommendations\">\n",
-    "    - Read through the [AQC-Tensor tutorial](https://learning.quantum.ibm.com/tutorial/improved-trotterized-time-evolution-with-approximate-quantum-compilation)\n",
+    "    - Try the [Approximate quantum compilation for time evolution circuits](/docs/tutorials/approximate-quantum-compilation-for-time-evolution) tutorial.\n",
     "</Admonition>"
    ]
   }
