--- a/docs/guides/operators-overview.ipynb
+++ b/docs/guides/operators-overview.ipynb
@@ -510,7 +510,7 @@
     "\n",
     "<Admonition type=\"tip\" title=\"Recommendations\">\n",
     "  - Learn how to [specify observables in the Pauli basis](./specify-observables-pauli).\n",
-    "  - See an example of using operators in the [Combine error mitigation options with the estimator primitive](https://learning.quantum.ibm.com/tutorial/combine-error-mitigation-options-with-the-estimator-primitive) tutorial.\n",
+    "  - See an example of using operators in the [Combine error mitigation options with the estimator primitive](/docs/tutorials/combine-error-mitigation-techniques) tutorial.\n",
     "  - Read more [in-depth coverage of the Operator class](./operator-class).\n",
     "  - Explore the [Operator API](/docs/api/qiskit/qiskit.quantum_info.Operator#operator) reference.\n",
     "</Admonition>"
