--- a/docs/guides/construct-circuits.ipynb
+++ b/docs/guides/construct-circuits.ipynb
@@ -485,7 +485,7 @@
     "## Next steps\n",
     "\n",
     "<Admonition type=\"tip\" title=\"Recommendations\">\n",
-    "  -  To learn about near-term quantum algorithms, take our [Variational algorithm design](https://learning.quantum.ibm.com/course/variational-algorithm-design) course.\n",
+    "  -  To learn about near-term quantum algorithms, take the [Variational algorithm design](/learning/courses/variational-algorithm-design) course.\n",
     "  -  See an example of circuits being used in the [Grover's Algorithm](/docs/tutorials/grovers-algorithm) tutorial.\n",
     "  -  Work with simple circuits using [IBM Quantum Composer](/docs/guides/composer).\n",
     "</Admonition>"
