--- a/docs/guides/estimate-job-run-time.ipynb
+++ b/docs/guides/estimate-job-run-time.ipynb
@@ -164,7 +164,7 @@
     "    - Review these tips: [Minimize job run time](minimize-time).\n",
     "    - Set the [Maximum execution time](max-execution-time).\n",
     "    - Learn how to transpile locally in the [Transpile](./transpile/) section.\n",
-    "    - Try the [Submit pre-transpiled circuits](https://learning.quantum.ibm.com/tutorial/submitting-user-transpiled-circuits-using-primitives) tutorial.\n",
+    "    - Try the [Compare transpiler settings](/docs/tutorials/circuit-transpilation-settings) tutorial.\n",
     "</Admonition>"
    ]
   }
