--- a/docs/guides/circuit-library.ipynb
+++ b/docs/guides/circuit-library.ipynb
@@ -207,7 +207,7 @@
    "id": "78772993-d0da-4651-9211-706e86a59432",
    "metadata": {},
    "source": [
-    "For more information, see [N-local gates](/docs/api/qiskit/circuit_library#n-local-circuits) in the circuit library API documentation or take our [Variational algorithm design course](https://learning.quantum.ibm.com/course/variational-algorithm-design)."
+    "For more information, see [N-local gates](/docs/api/qiskit/circuit_library#n-local-circuits) in the circuit library API documentation or take the [Variational algorithm design course](/learning/courses/variational-algorithm-design) in IBM Quantum Learning."
    ]
   },
   {
