--- a/docs/guides/qiskit-transpiler-service.ipynb
+++ b/docs/guides/qiskit-transpiler-service.ipynb
@@ -175,7 +175,7 @@
     "\n",
     "<Admonition type=\"tip\" title=\"Recommendations\">\n",
     "    - Learn how to create [AI transpiler passes.](ai-transpiler-passes)\n",
-    "    - Learn [how to transpile circuits](https://learning.quantum.ibm.com/tutorial/submit-transpiled-circuits) as part of Qiskit Patterns workflows using Qiskit Runtime.\n",
+    "    - Learn [how to transpile circuits](/docs/tutorials/circuit-transpilation-settings) as part of the Qiskit patterns workflow using Qiskit Runtime.\n",
     "    - Review the [Qiskit Transpiler Service Python client](/docs/api/qiskit-ibm-transpiler) documentation.\n",
     "</Admonition>"
    ]
