--- a/docs/guides/transpile-with-pass-managers.ipynb
+++ b/docs/guides/transpile-with-pass-managers.ipynb
@@ -335,8 +335,8 @@
     "    - [Write a custom transpiler pass](custom-transpiler-pass).\n",
     "    - [Create a pass manager for dynamical decoupling](dynamical-decoupling-pass-manager).\n",
     "    - To learn more about the `generate_preset_passmanager` function, see the [Transpilation default settings and configuration options](defaults-and-configuration-options) topic.\n",
-    "    - Try the [Submit transpiled circuits](https://learning.quantum.ibm.com/tutorial/submit-transpiled-circuits) tutorial.\n",
-    "    - See the [Transpile API documentation.](https://docs.quantum-computing.ibm.com/api/qiskit/transpiler)\n",
+    "    - Try the [Compare transpiler settings](/docs/tutorials/circuit-transpilation-settings) tutorial.\n",
+    "    - Review the [transpiler API documentation.](/docs/api/qiskit/transpiler)\n",
     "</Admonition>"
    ]
   }
