--- a/docs/guides/simulate-with-qiskit-sdk-primitives.ipynb
+++ b/docs/guides/simulate-with-qiskit-sdk-primitives.ipynb
@@ -9,6 +9,18 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b820ca5f-60cc-41c7-98db-4b41df4534cc",
+   "metadata": {
+    "tags": [
+     "version-info"
+    ]
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "id": "867f73c6-dd57-4755-9bbd-55ffffe7e09e",
    "metadata": {},
