--- a/docs/guides/serverless-run-first-workload.ipynb
+++ b/docs/guides/serverless-run-first-workload.ipynb
@@ -5,18 +5,7 @@
    "id": "6ec2a7ce-6d72-401c-aecd-59f2f519153a",
    "metadata": {},
    "source": [
-    "# Run your first Qiskit Serverless workload remotely\n",
-    "\n",
-    "<LegacyContent>\n",
-    "<Admonition type=\"note\">\n",
-    "This documentation is relevant to IBM Quantum&reg; Platform Classic. If you need the newer version, go to the new [IBM Quantum Platform documentation.](https://quantum.cloud.ibm.com/docs/guides/serverless-run-first-workload)\n",
-    "</Admonition>\n",
-    "</LegacyContent>\n",
-    "<CloudContent>\n",
-    "<Admonition type=\"note\">\n",
-    "This documentation is relevant to the new IBM Quantum&reg; Platform. If you need the previous version, return to the [IBM Quantum Platform Classic documentation.](https://docs.quantum.ibm.com/guides/serverless-run-first-workload)\n",
-    "</Admonition>\n",
-    "</CloudContent>"
+    "# Run your first Qiskit Serverless workload remotely"
    ]
   },
   {
