--- a/docs/guides/qunasys-quri-chemistry.ipynb
+++ b/docs/guides/qunasys-quri-chemistry.ipynb
@@ -7,20 +7,7 @@
    "source": [
     "# QURI Chemistry: a Qiskit Function by QunaSys\n",
     "\n",
-    "{/* cspell:ignore QSCI, CCSD, UCCSD, imags, CCGSD, CISD, photoisomerization */}\n",
-    "\n",
-    "<LegacyContent>\n",
-    "<Admonition type=\"note\" title=\"Notes\">\n",
-    "* This documentation is relevant to IBM Quantum&reg; Platform Classic. If you need the newer version, go to the new [IBM Quantum Platform documentation.](https://quantum.cloud.ibm.com/docs/guides/qunasys-quri-chemistry)\n",
-    "* Qiskit Functions are an experimental feature available only to IBM Quantum&reg; Premium Plan users. They are in preview release status and subject to change.\n",
-    "</Admonition>\n",
-    "</LegacyContent>\n",
-    "<CloudContent>\n",
-    "<Admonition type=\"note\" title=\"Notes\">\n",
-    "* This documentation is relevant to the new IBM Quantum&reg; Platform. If you need the previous version, return to the [IBM Quantum Platform Classic documentation.](https://docs.quantum.ibm.com/guides/qunasys-quri-chemistry)\n",
-    "* Qiskit Functions are an experimental feature available only to IBM Quantum&reg; Premium Plan users. They are in preview release status and subject to change.\n",
-    "</Admonition>\n",
-    "</CloudContent>"
+    "{/* cspell:ignore QSCI, CCSD, UCCSD, imags, CCGSD, CISD, photoisomerization */}"
    ]
   },
   {
