--- a/docs/guides/function-template-hamiltonian-simulation.ipynb
+++ b/docs/guides/function-template-hamiltonian-simulation.ipynb
@@ -5,18 +5,7 @@
    "id": "b3e994de-6477-421d-8a9a-6b20d45260ae",
    "metadata": {},
    "source": [
-    "# Build a function template for Hamiltonian simulation\n",
-    "\n",
-    "<LegacyContent>\n",
-    "<Admonition type=\"note\">\n",
-    "This documentation is relevant to IBM Quantum&reg; Platform Classic. If you need the newer version, go to the new [IBM Quantum Platform documentation.](https://quantum.cloud.ibm.com/docs/guides/function-template-hamiltonian-simulation)\n",
-    "</Admonition>\n",
-    "</LegacyContent>\n",
-    "<CloudContent>\n",
-    "<Admonition type=\"note\">\n",
-    "This documentation is relevant to the new IBM Quantum&reg; Platform. If you need the previous version, return to the [IBM Quantum Platform Classic documentation.](https://docs.quantum.ibm.com/guides/function-template-hamiltonian-simulation)\n",
-    "</Admonition>\n",
-    "</CloudContent>"
+    "# Build a function template for Hamiltonian simulation"
    ]
   },
   {
