--- a/docs/guides/primitives-examples.ipynb
+++ b/docs/guides/primitives-examples.ipynb
@@ -5,18 +5,7 @@
    "id": "1f4a2ec4-3595-4300-8f9e-092b0ef9b444",
    "metadata": {},
    "source": [
-    "# Primitives examples\n",
-    "\n",
-    "<LegacyContent>\n",
-    "<Admonition type=\"note\">\n",
-    "This documentation is relevant to IBM Quantum&reg; Platform Classic. If you need the newer version, go to the new [IBM Quantum Platform documentation.](https://quantum.cloud.ibm.com/docs/guides/primitives-examples)\n",
-    "</Admonition>\n",
-    "</LegacyContent>\n",
-    "<CloudContent>\n",
-    "<Admonition type=\"note\">\n",
-    "This documentation is relevant to the new IBM Quantum&reg; Platform. If you need the previous version, return to the [IBM Quantum Platform Classic documentation.](https://docs.quantum.ibm.com/guides/primitives-examples)\n",
-    "</Admonition>\n",
-    "</CloudContent>"
+    "# Primitives examples"
    ]
   },
   {
