--- a/docs/guides/serverless-first-program.ipynb
+++ b/docs/guides/serverless-first-program.ipynb
@@ -5,18 +5,7 @@
    "id": "e17b430a-ec17-4a88-9a71-9ce365059bea",
    "metadata": {},
    "source": [
-    "# Write your first Qiskit Serverless program\n",
-    "\n",
-    "<LegacyContent>\n",
-    "<Admonition type=\"note\">\n",
-    "This documentation is relevant to IBM Quantum&reg; Platform Classic. If you need the newer version, go to the new [IBM Quantum Platform documentation.](https://quantum.cloud.ibm.com/docs/guides/serverless-first-program)\n",
-    "</Admonition>\n",
-    "</LegacyContent>\n",
-    "<CloudContent>\n",
-    "<Admonition type=\"note\">\n",
-    "This documentation is relevant to the new IBM Quantum&reg; Platform. If you need the previous version, return to the [IBM Quantum Platform Classic documentation.](https://docs.quantum.ibm.com/guides/serverless-first-program)\n",
-    "</Admonition>\n",
-    "</CloudContent>"
+    "# Write your first Qiskit Serverless program"
    ]
   },
   {
