--- a/docs/guides/serverless-manage-resources.ipynb
+++ b/docs/guides/serverless-manage-resources.ipynb
@@ -5,18 +5,7 @@
    "id": "6b7abc7b-b435-43d1-9fd8-c349ee8710f3",
    "metadata": {},
    "source": [
-    "# Manage Qiskit Serverless compute and data resources\n",
-    "\n",
-    "<LegacyContent>\n",
-    "<Admonition type=\"note\">\n",
-    "This documentation is relevant to IBM Quantum&reg; Platform Classic. If you need the newer version, go to the new [IBM Quantum Platform documentation.](https://quantum.cloud.ibm.com/docs/guides/serverless-manage-resources)\n",
-    "</Admonition>\n",
-    "</LegacyContent>\n",
-    "<CloudContent>\n",
-    "<Admonition type=\"note\">\n",
-    "This documentation is relevant to the new IBM Quantum&reg; Platform. If you need the previous version, return to the [IBM Quantum Platform Classic documentation.](https://docs.quantum.ibm.com/guides/serverless-manage-resources)\n",
-    "</Admonition>\n",
-    "</CloudContent>"
+    "# Manage Qiskit Serverless compute and data resources"
    ]
   },
   {
