--- a/docs/guides/multiverse-computing-singularity.ipynb
+++ b/docs/guides/multiverse-computing-singularity.ipynb
@@ -13,18 +13,7 @@
    "id": "dde95705",
    "metadata": {},
    "source": [
-    "# Singularity Machine Learning - Classification: A Qiskit Function by Multiverse Computing\n",
-    "\n",
-    "<LegacyContent>\n",
-    "<Admonition type=\"note\">\n",
-    "This documentation is relevant to IBM Quantum&reg; Platform Classic. If you need the newer version, go to the new [IBM Quantum Platform documentation.](https://quantum.cloud.ibm.com/docs/guides/multiverse-computing-singularity)\n",
-    "</Admonition>\n",
-    "</LegacyContent>\n",
-    "<CloudContent>\n",
-    "<Admonition type=\"note\">\n",
-    "This documentation is relevant to the new IBM Quantum&reg; Platform. If you need the previous version, return to the [IBM Quantum Platform Classic documentation.](https://docs.quantum.ibm.com/guides/multiverse-computing-singularity)\n",
-    "</Admonition>\n",
-    "</CloudContent>"
+    "# Singularity Machine Learning - Classification: A Qiskit Function by Multiverse Computing"
    ]
   },
   {
