--- a/docs/guides/save-jobs.ipynb
+++ b/docs/guides/save-jobs.ipynb
@@ -5,18 +5,7 @@
    "id": "539f98fa-9ccc-472a-99da-ebe6382243dc",
    "metadata": {},
    "source": [
-    "# Save and retrieve jobs\n",
-    "\n",
-    "<LegacyContent>\n",
-    "<Admonition type=\"note\">\n",
-    "This documentation is relevant to IBM Quantum&reg; Platform Classic. If you need the newer version, go to the new [IBM Quantum Platform documentation.]( https://quantum.cloud.ibm.com/docs/guides/save-jobs)\n",
-    "</Admonition>\n",
-    "</LegacyContent>\n",
-    "<CloudContent>\n",
-    "<Admonition type=\"note\">\n",
-    "This documentation is relevant to the new IBM Quantum&reg; Platform. If you need the previous version, return to the [IBM Quantum Platform Classic documentation.](https://docs.quantum.ibm.com/guides/save-jobs)\n",
-    "</Admonition>\n",
-    "</CloudContent>"
+    "# Save and retrieve jobs"
    ]
   },
   {
