--- a/docs/tutorials/hello-world.ipynb
+++ b/docs/tutorials/hello-world.ipynb
@@ -5,18 +5,7 @@
    "id": "552b1077",
    "metadata": {},
    "source": [
-    "# Hello world\n",
-    "\n",
-    "<LegacyContent>\n",
-    "<Admonition type=\"note\">\n",
-    "This documentation is relevant to IBM Quantum&reg; Platform Classic. If you need the newer version, go to the new [IBM Quantum Platform documentation.](https://quantum.cloud.ibm.com/docs/tutorials/hello-world)\n",
-    "</Admonition>\n",
-    "</LegacyContent>\n",
-    "<CloudContent>\n",
-    "<Admonition type=\"note\">\n",
-    "This documentation is relevant to the new IBM Quantum&reg; Platform. If you need the previous version, return to the [IBM Quantum Platform Classic documentation.](https://docs.quantum.ibm.com/tutorials/hello-world)\n",
-    "</Admonition>\n",
-    "</CloudContent>"
+    "# Hello world"
    ]
   },
   {
