--- a/docs/tutorials/qunova-hivqe.ipynb
+++ b/docs/tutorials/qunova-hivqe.ipynb
@@ -17,7 +17,7 @@
    "metadata": {},
    "source": [
     "<Admonition type=\"note\" title=\"Note\">\n",
-    "* Qiskit Functions are an experimental feature available only to IBM Quantum&reg; Premium Plan and Flex Plan users. They are in preview release status and subject to change.\n",
+    "* Qiskit Functions are an experimental feature available only to IBM Quantum&reg; Premium Plan, Flex Plan, and On-Prem Plan users. They are in preview release status and subject to change.\n",
     "</Admonition>\n",
     "\n",
     "*Usage estimate (NOTE: This is an estimate only. Your runtime may vary.)*\n",
