--- a/docs/guides/transpiler-plugins.ipynb
+++ b/docs/guides/transpiler-plugins.ipynb
@@ -401,7 +401,7 @@
     "\n",
     "<Admonition type=\"tip\" title=\"Recommendation\">\n",
     "    - [Create a transpiler plugin](./create-transpiler-plugin).\n",
-    "    - Check out the [tutorials](/learning) for examples of transpiling and running quantum circuits.\n",
+    "    - Check out the [tutorials](/docs/tutorials) for examples of transpiling and running quantum circuits.\n",
     "</Admonition>"
    ]
   }
