--- a/docs/tutorials/global-data-quantum-optimizer.ipynb
+++ b/docs/tutorials/global-data-quantum-optimizer.ipynb
@@ -16,7 +16,7 @@
    "metadata": {},
    "source": [
     "<Admonition type=\"note\" title=\"Note\">\n",
-    "* Qiskit Functions are an experimental feature available only to IBM Quantum&reg; Premium Plan, Flex Plan, and On-Prem Plan users. They are in preview release status and subject to change.\n",
+    "Qiskit Functions are an experimental feature available only to IBM Quantum&reg; Premium Plan, Flex Plan, and On-Prem Plan users. They are in preview release status and subject to change.\n",
     "</Admonition>\n",
     "\n",
     "*Usage estimate: Approximately 55 minutes on ibm_torino. (NOTE: This is an estimate only. Actual runtime may vary.)*"
