--- a/docs/tutorials/edc-cut-bell-pair-benchmarking.ipynb
+++ b/docs/tutorials/edc-cut-bell-pair-benchmarking.ipynb
@@ -685,7 +685,7 @@
  "metadata": {
   "description": "Benchmark dynamic circuit capabilities with cut Bell pair protocol",
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -699,9 +699,16 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3"
+   "version": "3.11.13"
   },
-  "title": "Benchmark dynamic circuits with cut Bell pairs"
+  "title": "Benchmark dynamic circuits with cut Bell pairs",
+  "widgets": {
+   "application/vnd.jupyter.widget-state+json": {
+    "state": {},
+    "version_major": 2,
+    "version_minor": 0
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 5
