--- a/docs/tutorials/sample-based-quantum-diagonalization.ipynb
+++ b/docs/tutorials/sample-based-quantum-diagonalization.ipynb
@@ -5,7 +5,7 @@
    "id": "9e40af77-7f0f-4dd6-ab0a-420cf396050e",
    "metadata": {},
    "source": [
-    "{/* cspell:ignore LUCJ CCSD ccsd hcore */}\n",
+    "{/* cspell:ignore LUCJ CCSD ccsd hcore pvdz */}\n",
     "\n",
     "# Sample-based quantum diagonalization of a chemistry Hamiltonian\n",
     "*Usage estimate: under 1 minute on ibm_fez (NOTE: This is an estimate only. Your runtime may vary.)*"
