--- a/docs/guides/job-limits.mdx
+++ b/docs/guides/job-limits.mdx
@@ -50,4 +50,4 @@ The maximum number of single-qubit gates are as follows:
 - 30 million RZ gates
 - 20 million SX gates
 
-The maximum number of two-qubit gates per circuit is 5 million. This ensures that the job can be manipulated within the memory limits of the low-level software stack.
+The maximum number of two-qubit gates per circuit is five million. This ensures that the job can be manipulated within the memory limits of the low-level software stack.
